--- a/Packs/Active_Directory_Query/Integrations/Active_Directory_Query/Active_Directory_Query.yml
+++ b/Packs/Active_Directory_Query/Integrations/Active_Directory_Query/Active_Directory_Query.yml
@@ -5,7 +5,7 @@ name: Active Directory Query v2
 display: Active Directory Query v2
 category: Data Enrichment & Threat Intelligence
 description: The Active Directory Query integration enables you to access and manage Active
-  Directory objects (users, contacts, and computers).
+  Directory objects. (users, contacts, and computers).
 configuration:
 - display: Server IP address (for example, 192.168.0.1)
   name: server_ip
